Profiles for creative group. Map for the participants page. Lots of makeup fixes.

--- a/app/views/articles/_persons.html.erb
+++ b/app/views/articles/_persons.html.erb
@@ -5,7 +5,7 @@
         <%= link_to image_tag(article.picture.url(:slider)), article%>
         <div class="info">
           <div class="name"><%= article.title %></div>
-          <div class="short_desc"><%== article.short_description %></div>
+          <div class="short_desc"><%= article.short_description %></div>
 	  <% if article.comments.count > 0 %>
 	    <div class="comment_count"><%= article.comments.count %></div>
 	  <% end %>
@@ -14,6 +14,8 @@
     <% end %>
   </div>
   <img class="person_slide_lenta" alt="" src="assets/personality_lenta.png">
-  <%= link_to image_tag("page_slider_arrow_right.png"), '#', class: "next" %>
-  <%= link_to image_tag("page_slider_arrow_left.png"), '#', class: "prev" %>
+  <% if @persons_category.articles.count > 1 %>
+    <%= link_to image_tag("page_slider_arrow_right.png"), '#', class: "next" %>
+    <%= link_to image_tag("page_slider_arrow_left.png"), '#', class: "prev" %>
+  <% end %>
 </div>
