--- a/app/assets/stylesheets/council_slider.css
+++ b/app/assets/stylesheets/council_slider.css
@@ -17,15 +17,13 @@
         overflow: hidden;
 }
 
-article img {
-        width: 100%;
-}
+article { }
 
-article a.thumb { position:relative; overflow:hidden; -moz-border-radius:0 0 40px 40px; border-radius:0 0 40px 40px; -webkit-border-radius:0 0 40px 40px; -khtml-border-radius:0 0 40px 40px; behavior: url(/assets/border-radius.htc); display:block; width:130px; margin:auto; -moz-box-shadow:3px 3px 6px rgba(0,0,0,0.3);
+article a.thumb { position:relative; overflow:hidden; -moz-border-radius:0 0 40px 40px; border-radius:0 0 40px 40px; -webkit-border-radius:0 0 40px 40px; -khtml-border-radius:0 0 40px 40px; behavior: url(/assets/border-radius.htc); display:block; width: 82%; margin:auto; -moz-box-shadow:3px 3px 6px rgba(0,0,0,0.3);
         -webkit-box-shadow:3px 3px 6px rgba(0,0,0,0.3);
         box-shadow:3px 3px 6px rgba(0,0,0,0.3);}
 
-article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
+article a.thumb img { width: 100%; border-radius:0 0 40px 40px;}
 
 #slides .inner {
         width: 400%;
@@ -38,7 +36,7 @@ article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
         padding-bottom:10px
 }
 
-#slides article .info { width:140px; margin:auto; color:#795113; font-size:14px; text-align:center; padding-bottom:10px; font-weight:bold;}
+#slides article .info { margin:auto; color:#795113; font-size:14px; text-align:center; padding-bottom:10px; font-weight:bold;}
 #slides article .info span { text-transform:uppercase; }
 
 /* Slider Styling */
@@ -85,8 +83,8 @@ article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
 #slide1:checked ~ #controls label:nth-child(2), 
 #slide2:checked ~ #controls label:nth-child(3), 
 #slide3:checked ~ #controls label:nth-child(4), 
-#slide4:checked ~ #controls label:nth-child(1)/*, 
-#slide5:checked ~ #controls label:nth-child(6), 
+#slide4:checked ~ #controls label:nth-child(1), 
+#slide5:checked ~ #controls label:nth-child(6)/*, 
 #slide6:checked ~ #controls label:nth-child(7), 
 #slide7:checked ~ #controls label:nth-child(8), 
 #slide8:checked ~ #controls label:nth-child(9), 
@@ -102,8 +100,8 @@ article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
 #slide1:checked ~ #controls label:nth-child(4),
 #slide2:checked ~ #controls label:nth-child(1),
 #slide3:checked ~ #controls label:nth-child(2),
-#slide4:checked ~ #controls label:nth-child(3)/*,
-#slide5:checked ~ #controls label:nth-child(4),
+#slide4:checked ~ #controls label:nth-child(3),
+#slide5:checked ~ #controls label:nth-child(4)/*,
 #slide6:checked ~ #controls label:nth-child(5),
 #slide7:checked ~ #controls label:nth-child(6),
 #slide8:checked ~ #controls label:nth-child(7),
@@ -168,4 +166,38 @@ article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
         -moz-transition: all 0.5s ease-out;
         -o-transition: all 0.5s ease-out;
         transition: all 0.5s ease-out;
+}
+
+@media only screen and (min-width: 1013px) and (max-width: 1060px)
+{
+  #slide1:checked ~ #controls label:nth-child(2), 
+  #slide2:checked ~ #controls label:nth-child(3), 
+  #slide3:checked ~ #controls label:nth-child(4), 
+  #slide4:checked ~ #controls label:nth-child(1)
+  {
+    margin: 55px 5.5% 0 0 ;
+  }
+  
+  #slide1:checked ~ #controls label:nth-child(4),
+  #slide2:checked ~ #controls label:nth-child(1),
+  #slide3:checked ~ #controls label:nth-child(2),
+  #slide4:checked ~ #controls label:nth-child(3)
+  {
+    margin: 55px 0 0 5.5%;
+  }
+}
+
+@media only screen and (max-width: 1012px)
+{
+  #slide1:checked ~ #controls label:nth-child(2), 
+  #slide2:checked ~ #controls label:nth-child(3), 
+  #slide3:checked ~ #controls label:nth-child(4), 
+  #slide4:checked ~ #controls label:nth-child(1),
+  #slide1:checked ~ #controls label:nth-child(4),
+  #slide2:checked ~ #controls label:nth-child(1),
+  #slide3:checked ~ #controls label:nth-child(2),
+  #slide4:checked ~ #controls label:nth-child(3)
+  {
+    margin-top: 85px;
+  }
 }
