--- a/app/assets/stylesheets/participants.css
+++ b/app/assets/stylesheets/participants.css
@@ -1,7 +1,17 @@
-.participants_menu {}
-.participants_menu li { display: inline-block; width: 16%; margin: 20px 0; text-align: center; }
-.participants_menu li a { font-size: 85%; }
+.participants_menu { margin-left: 15px; }
+.participants_menu li { display: inline-block; margin: 20px 30px 0 0; }
+.participants_menu li a { font-size: 85%; color: #777; }
+.participants_menu li a.active { font-weight: bold }
 
+.participants_map { position: relative }
+.participants_map .text { overflow: hidden; height: 45px; line-height: 15px; margin-top: 15px; }
+.participants_map .map { margin-top: 10px; background-color: #ccc; }
+.participants_map .map img { width: 100%; }
+.participants_map_toggle_wrapper { margin-bottom: 40px; }
+#participants_map_toggle { width: 200px; margin: 0 auto; padding: 5px; background-color: #eee; text-align: center; font-size: 80%; behaviour: url(border-radius.htc); border-radius: 7px 0; -webkit-border-radius: 7px 0; -moz-border-radius: 7px 0; -khtml-border-radius: 7px 0; }
+#participants_map_toggle:hover { cursor: pointer }
+
+.main_participants { margin-top: 20px; }
 .main_participants .item { float: left; width: 32%; margin-right: 2%; }
 .main_participants .item:last-child { margin-right: 0; }
 .main_participants .item img { display: block; width: 100%; behaviour: url(border-radius.htc); border-radius: 7px; -webkit-border-radius: 7px; -moz-border-radius: 7px; -khtml-border-radius: 7px; }
