--- a/app/views/pages/mission.html.erb
+++ b/app/views/pages/mission.html.erb
@@ -1,10 +1,3 @@
-#TODO
-#TODO
-#TODO
-#TODO
-#TODO
-#TODO
-#TODO
-#TODO
-#TODO
-#TODO
+<div class="pages">
+  <%== Page.as('mission').text %>
+</div>
