--- a/app/views/home/_council.html.erb
+++ b/app/views/home/_council.html.erb
@@ -28,7 +28,7 @@
 
     <!-- Slider Setup -->
 
-    <input class="hidden" checked type="radio" name="slider" id="slide1" />
+    <input class="hidden" type="radio" name="slider" id="slide1" checked />
     <input class="hidden" type="radio" name="slider" id="slide2" />
     <input class="hidden" type="radio" name="slider" id="slide3" />
     <input class="hidden" type="radio" name="slider" id="slide4" />
