--- a/app/views/articles/_persons.html.erb
+++ b/app/views/articles/_persons.html.erb
@@ -5,7 +5,7 @@
         <%= link_to image_tag(article.picture.url(:slider)), article%>
         <div class="info">
           <div class="name"><%= article.title %></div>
-          <div class="short_desc"><%= article.short_description %></div>
+          <div class="short_desc"><%== article.short_description %></div>
 	  <% if article.comments.count > 0 %>
 	    <div class="comment_count"><%= article.comments.count %></div>
 	  <% end %>
