--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -55,10 +55,11 @@
         <div class="title"><span>Лучшее</span></div>
         <%= render 'items', articles: @best_articles %>
       <% end %>
-      <%# if @news.any? %>
-        <%#*<div class="title"><span>Новости</span></div>%>
-        <%#= render 'news/page',  news: @news %>
-      <%# end %>
+
+      <% if News.count > 0 %>
+        <div class="title"><span>Новости</span></div>
+        <%= render 'news',  news: News.order('publication_date DESC').first(3) %>
+      <% end %>
     </div>
   </div>
 
