--- a/app/views/admin/article_posts/_form.html.erb
+++ b/app/views/admin/article_posts/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :best, as: :select, collection: [['Да', true],['Нет', false]], include_blank: false %>
     <%= f.input :category, as: :select, collection: ArticleCategory.all, include_blank: false, input_html: { class: 'chosen_autocomplete' } %>
     <%= f.input :author, as: :select, collection: User.all, include_blank: false, input_html: { class: 'chosen_autocomplete' } %>
-
+    <%= f.input :publication_date %>
 
     <%= render 'shared/editor_toolbar', element_id: 'article_biography' %>
     <%= f.input :biography, input_html: {size: 10} %>
@@ -33,7 +33,8 @@
     <%= f.input :best, as: :select, collection: [['Да', true],['Нет', false]], include_blank: false %>
     <%= f.input :category, as: :select, collection: ArticleCategory.all, include_blank: false, input_html: { class: 'chosen_autocomplete' } %>
     <%= f.input :author, as: :select, collection: User.all, include_blank: false, input_html: { class: 'chosen_autocomplete' } %>
-
+    <%= f.input :publication_date %>
+    
     <%= render 'shared/editor_toolbar', element_id: 'article_biography' %>
     <%= f.input :biography, input_html: {size: 10} %>
 
