add editors to some admin fields

--- a/app/views/admin/news/_form.html.erb
+++ b/app/views/admin/news/_form.html.erb
@@ -5,6 +5,10 @@
     <%= f.input :photo, as: :file, hint: f.template.image_tag(f.object.photo.url) %>
     <%= f.input :publication_date %>
     <%= f.input :content, input_html: { size: 10 } %>
+
+    <%= render 'shared/editor_toolbar', element_id: 'news_full_text' %>
+    <%= f.input :full_text, input_html: { size: 10 } %>
+    
     <%= f.input :news_tag_list %>
   <% end %>
 
