--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -51,8 +51,8 @@
 	    <% unless @activity.metro_station.uniq.blank? %>
         <% @activity.metro_station.uniq.each do |ms| %>
           <tr>
-          <th><span>Метро</span></th>
-          <td><%= image_tag ms.metro_branch.icon.url %><%= ms.title %><br />
+          <th><%= image_tag ms.metro_branch.icon.url %></th>
+          <td><%= ms.title %><br />
           </tr>
         <% end %>
       <% end %>
