--- a/app/views/creative_group/index.html.erb
+++ b/app/views/creative_group/index.html.erb
@@ -16,7 +16,7 @@
   <div class="expert_list_wrapper">
     <div class="expert_list">
       
-    <% @cg.each do |tm| %>
+    <% @cg.each_with_index do |tm, index| %>
       <div class="exp_preview">
         <%= link_to creative_group_path(tm) do %>
         <div class="thumb">
@@ -26,6 +26,9 @@
         <% end %>
         <span class="info"><%= tm.profession %>, <%= tm.description %></span>
       </div>
+      <% if (index+1) % 6 == 0 %>
+      <div class="clear"></div>
+      <% end %>
     <% end %>
       
       <div class="clear"></div>
