Tiny participants CSS fix.

--- a/app/assets/stylesheets/participants.css
+++ b/app/assets/stylesheets/participants.css
@@ -22,8 +22,9 @@
 .main_participants .item .title { margin: 10px 3px; padding-bottom: 0; font-weight: bold; }
 
 .participants { margin-top: 15px; padding-top: 15px; border-top: 1px solid #ccc; }
+.participants .participant { margin-bottom: 20px; }
 .participants .participant_wrapper { border-bottom: 1px solid #ccc; margin-bottom: 15px; padding-bottom: 15px; }
 .participants .participant_photo { float: left; width: 120px;}
 .participants .participant_photo img { display: block; width: 100%; behaviour: url(border-radius.htc); border-radius: 7px; -webkit-border-radius: 7px; -moz-border-radius: 7px; -khtml-border-radius: 7px; }
 .participants .participant_data { margin-left: 130px; }
-.participants .participant_title { margin-bottom: 10px; font-weight: bold; }
+.participants .participant_title { margin-bottom: 5px; font-weight: bold; }
