Small news makeup fix. Small creative group makeup fix.

--- a/app/views/creative_group/index.html.erb
+++ b/app/views/creative_group/index.html.erb
@@ -24,7 +24,7 @@
         </div>
         <span class="name"><%= tm.name %></span>
         <% end %>
-        <span class="info"><%= tm.profession %>, <%= tm.description %></span>
+        <span class="info"><%= tm.profession %></span>
       </div>
       <% if (index+1) % 6 == 0 %>
       <div class="clear"></div>
