--- a/app/views/creative_group/show.html.erb
+++ b/app/views/creative_group/show.html.erb
@@ -19,7 +19,7 @@
     <div class="thumb">
       <%= link_to image_tag(@creative.avatar(:medium)), creative_group_path(@creative) %>
     </div>
-    <div class="doljnost"><%= @creative.description %></div>
+    <div class="doljnost"><%= @creative.profession %></div>
     <div class="clear"></div>
   </div>
   
