--- a/app/views/admin/participants/_video_fields.html.erb
+++ b/app/views/admin/participants/_video_fields.html.erb
@@ -1,6 +1,5 @@
 <div class="nested-fields">
   <%= f.inputs do %>
-    <% f.input :url %>
+    <% f.input :url, as: :string %>
   <% end %>
-  <%= link_to 'Убрать видео', '#', :class => 'remove_participant_video', 'data-photo-id' => f.object.try(:id) %>
 </div>
