--- a/app/views/admin/news/_form.html.erb
+++ b/app/views/admin/news/_form.html.erb
@@ -12,26 +12,7 @@
     <%= f.input :news_tag_list %>
   <% end %>
 
-  <%= f.inputs "Медиа контент" do %>
-    <div class="news_photos">
-      <% f.object.photos.each do |ph| %>
-        <div class='thumb'>
-          <%= image_tag ph.attach.url %>
-          <%= link_to 'Убрать фотографию', '#', :class => 'remove_news_photo', 'data-photo-id' => ph.try(:id) %>
-        </div>
-      <% end %>
-      <input type="file" name="news[photos_attributes][][attach]" multiple="multiple" accept="image"/>
-    </div>
-
-    <div class="news_videos">
-      <%= f.semantic_fields_for :videos do |video| %>
-        <%= render 'admin/news/video_fields', f: video %>
-      <% end %>
-    </div>
-    <%= link_to_add_association 'Добавить ссылку на видео', f, :videos,
-                                  'data-association-insertion-method' => 'append',
-                                  'data-association-insertion-node' => '.news_videos' %>
-  <% end %>
+  <%= render 'admin/shared/media_content', f: f %>
 
   <%= f.buttons do %>
     <%= f.commit_button %>
