--- a/app/views/admin/participants/_form.html.erb
+++ b/app/views/admin/participants/_form.html.erb
@@ -15,29 +15,8 @@
     <%= f.input :description, input_html: { size: 10 } %>
   <% end %>
 
-  <%= f.inputs "Медиа контент" do %>
-    <div class="participant_photos">
-      <h3>Фотографии:</h3>
-      <% f.object.photos.each do |ph| %>
-        <div class='thumb'>
-          <%= image_tag ph.attach.url %>
-          <%= link_to 'Убрать фотографию', '#', :class => 'remove_participant_photo', 'data-photo-id' => ph.try(:id) %>
-        </div>
-      <% end %>
-      <input type="file" name="participant[photos_attributes][][attach]" multiple="multiple" accept="image"/>
-    </div>
-    <br>
-    <h3>Видео:</h3>
-    <div class="participant_videos">
-      <%= f.semantic_fields_for :videos do |video| %>
-        <%= render 'admin/participants/video_fields', f: video %>
-      <% end %>
-    </div>
-    <%= link_to_add_association 'Добавить ссылку на видео', f, :videos,
-                                  'data-association-insertion-method' => 'append',
-                                  'data-association-insertion-node' => '.participant_videos' %>
-  <% end %>
-    
+  <%= render 'admin/shared/media_content', f: f %>
+
   <%= f.buttons do %>
     <%= f.commit_button %>
   <% end %>
